# challenge-with-localstack

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configuration-user/: .env.example  Dockerfile  README.md  pyproject.toml
configuration-user/configurationuser/: config.py  exceptions.py  main.py  security.py
configuration-user/configurationuser/api/: __init__.py
configuration-user/configurationuser/api/routes/: age_group.py
configuration-user/configurationuser/aws/: dynamodb.py
configuration-user/configurationuser/repositories/: age_group.py
configuration-user/configurationuser/schemas/: age_group_schema.py
configuration-user/configurationuser/services/: age_group.py
configuration-user/tests/: conftest.py  test_age_group.py
final-user/: .env.example  Dockerfile  README.md  pyproject.toml
final-user/finaluser/: config.py  exceptions.py  logger.py  main.py
final-user/finaluser/api/: __init__.py
final-user/finaluser/api/routes/: enrollment.py
final-user/finaluser/aws/: dynamodb.py  sqs_aws.py
final-user/finaluser/repositories/: age_group.py  enrollment.py
final-user/finaluser/schemas/: enrollment.py
final-user/finaluser/services/: enrollment.py
final-user/tests/: conftest.py  test_enrollment.py
lambda/: consumer_enrollment.py
scripts/: setup.sh
